--- a/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.maciej</groupId>
     <artifactId>oauth2-authorization-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <parent>
+        <groupId>com.maciej</groupId>
+        <artifactId>oauth2-framework-impl-jakarta</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+
 </project>
