--- a/oauth2-framework-impl-jakarta/pom.xml
+++ b/oauth2-framework-impl-jakarta/pom.xml
@@ -7,11 +7,28 @@
     <groupId>com.maciej</groupId>
     <artifactId>oauth2-framework-impl-jakarta</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>oauth2-framework-impl-jakarta</name>
+    <packaging>pom</packaging>
 
     <modules>
         <module>oauth2-authorization-server</module>
         <module>oauth2-resource-server</module>
         <module>oauth2-client</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
