Added dependencies - microprofile-config and nimbus-jose-jwt

--- a/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
@@ -25,5 +25,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <!-- robust Java library for JSON Web Tokens -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>8.2.1</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
