Added gitignore; maven build woth liberty server; Identity store

--- a/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
@@ -4,26 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oauth2-authorization-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <parent>
         <groupId>com.maciej</groupId>
         <artifactId>oauth2-framework-impl-jakarta</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>oauth2-authorization-server</artifactId>
+    <name>oauth2-authorization-server</name>
+    <packaging>war</packaging>
+
+    <properties>
+        <h2.version>1.4.199</h2.version>
+        <httpPort>9080</httpPort>
+        <httpsPort>9443</httpsPort>
+    </properties>
 
     <dependencies>
         <!-- robust Java library for JSON Web Tokens -->
@@ -34,5 +29,38 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                <artifactId>liberty-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-h2-dependency</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>com.h2database</groupId>
+                            <artifactId>h2</artifactId>
+                            <version>${h2.version}</version>
+                            <type>jar</type>
+                            <outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources/
+                            </outputDirectory>
+                        </artifactItem>
+                    </artifactItems>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
