--- a/oauth2-framework-impl-jakarta/pom.xml
+++ b/oauth2-framework-impl-jakarta/pom.xml
@@ -16,6 +16,16 @@
         <module>oauth2-client</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        <openliberty.version>RELEASE</openliberty.version>
+        <openliberty.maven.version>2.6.4</openliberty.maven.version>
+<!--        <javaee-web-api.version>8.0</javaee-web-api.version>-->
+<!--        <microprofile-config-api.version>1.3</microprofile-config-api.version>-->
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -36,5 +46,61 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>${basedir}/src/main/liberty</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                    <artifactId>liberty-maven-plugin</artifactId>
+                    <version>${openliberty.maven.version}</version>
+                    <executions>
+                        <execution>
+                            <id>package-server</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>create-server</goal>
+                                <goal>install-apps</goal>
+                            </goals>
+                            <configuration>
+                                <outputDirectory>target/wlp-package</outputDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <assemblyArtifact>
+                            <groupId>io.openliberty</groupId>
+                            <artifactId>openliberty-webProfile8</artifactId>
+                            <version>${openliberty.version}</version>
+                            <type>zip</type>
+                        </assemblyArtifact>
+                        <configFile>target/classes/config/server.xml</configFile>
+                        <appArchive>${project.build.directory}/${project.build.finalName}.war</appArchive>
+                        <installAppPackages>project</installAppPackages>
+                        <configDirectory>${project.basedir}/src/main/liberty/server</configDirectory>
+                        <appsDirectory>apps</appsDirectory>
+                        <looseApplication>true</looseApplication>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 
 </project>
