--- a/oauth2-framework-impl-jakarta/oauth2-client/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-client/pom.xml
@@ -4,9 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.maciej</groupId>
+    <parent>
+        <groupId>com.maciej</groupId>
+        <artifactId>oauth2-framework-impl-jakarta</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>oauth2-client</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>oauth2-client</name>
+    <packaging>war</packaging>
 
     
 </project>
