--- a/oauth2-framework-impl-jakarta/oauth2-client/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-client/pom.xml
@@ -15,5 +15,19 @@
     <name>oauth2-client</name>
     <packaging>war</packaging>
 
-    
+    <properties>
+        <httpPort>9180</httpPort>
+        <httpsPort>9543</httpsPort>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                <artifactId>liberty-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
