--- a/oauth2-framework-impl-jakarta/oauth2-resource-server/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-resource-server/pom.xml
@@ -4,9 +4,40 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.maciej</groupId>
+    <parent>
+        <groupId>com.maciej</groupId>
+        <artifactId>oauth2-framework-impl-jakarta</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>oauth2-resource-server</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>oauth2-resource-server</name>
+    <packaging>war</packaging>
 
-    
+    <properties>
+        <httpPort>9280</httpPort>
+        <httpsPort>8643</httpsPort>
+        <jwt.issuer>http://localhost:9080</jwt.issuer>
+        <jwt.resourceId>http://localhost:9280</jwt.resourceId>
+        <microprofile-jwt-auth-api.version>1.1</microprofile-jwt-auth-api.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.microprofile.jwt</groupId>
+            <artifactId>microprofile-jwt-auth-api</artifactId>
+            <version>${microprofile-jwt-auth-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                <artifactId>liberty-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
