--- a/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
+++ b/oauth2-framework-impl-jakarta/oauth2-authorization-server/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <h2.version>1.4.199</h2.version>
+        <bcprov-jdk15on.version>1.62</bcprov-jdk15on.version>
+        <bcpkix-jdk15on.version>1.62</bcpkix-jdk15on.version>
         <httpPort>9080</httpPort>
         <httpsPort>9443</httpsPort>
     </properties>
@@ -25,7 +27,17 @@
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>8.2.1</version>
+            <version>7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bcprov-jdk15on.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>${bcpkix-jdk15on.version}</version>
         </dependency>
     </dependencies>
 
