--- a/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/application.yml
+++ b/oauth2-spring-pluralsight/client_app_facebook_sso/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+disableEmailVerification: true
+
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          facebook:
+            client-id: 480333526007543
+            client-secret: 27fc07fcb10976229e6c0449738880b7
 
 logging:
   level:
